Details
-
Type:
Bug
-
Status: Resolved
-
Priority:
Medium
-
Resolution: Done
-
Component/s: Compiler
-
Labels:
-
Environment:
Xcode (10A255), macOS 10.13.6 (17G2307)
-
Radar URL:
Description
Our app is failing to archive in new Xcode 10 and Swift 4. (-0)
CompileSwift normal arm64 (in target: Equa bank)CompileSwift normal arm64 (in target: Equa bank) cd /Users/lukas/Projects/Equa\ Bank/mequa-ios /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/swift -frontend -c -filelist /var/folders/bw/s7y418kn7fz67tzkzst5_2jh0000gn/T/sources-e3a4a7 -supplementary-output-file-map /var/folders/bw/s7y418kn7fz67tzkzst5_2jh0000gn/T/supplementaryOutputs-46e152 -target arm64-apple-ios10.0 -Xllvm -aarch64-use-tbi -enable-objc-interop -sdk /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS12.0.sdk -I /Users/lukas/Library/Developer/Xcode/DerivedData/Equa_bank-copjuamabgqmrhdvprfmhnlvobyc/Build/Intermediates.noindex/ArchiveIntermediates/Production/BuildProductsPath/Release\ Production-iphoneos -F /Users/lukas/Library/Developer/Xcode/DerivedData/Equa_bank-copjuamabgqmrhdvprfmhnlvobyc/Build/Intermediates.noindex/ArchiveIntermediates/Production/BuildProductsPath/Release\ Production-iphoneos -F /Users/lukas/Library/Developer/Xcode/DerivedData/Equa_bank-copjuamabgqmrhdvprfmhnlvobyc/Build/Intermediates.noindex/ArchiveIntermediates/Production/BuildProductsPath/Release\ Production-iphoneos/AFDateHelper -F /Users/lukas/Library/Developer/Xcode/DerivedData/Equa_bank-copjuamabgqmrhdvprfmhnlvobyc/Build/Intermediates.noindex/ArchiveIntermediates/Production/BuildProductsPath/Release\ Production-iphoneos/Cluster -F /Users/lukas/Library/Developer/Xcode/DerivedData/Equa_bank-copjuamabgqmrhdvprfmhnlvobyc/Build/Intermediates.noindex/ArchiveIntermediates/Production/BuildProductsPath/Release\ Production-iphoneos/DeallocationChecker -F /Users/lukas/Library/Developer/Xcode/DerivedData/Equa_bank-copjuamabgqmrhdvprfmhnlvobyc/Build/Intermediates.noindex/ArchiveIntermediates/Production/BuildProductsPath/Release\ Production-iphoneos/DeviceKit -F /Users/lukas/Library/Developer/Xcode/DerivedData/Equa_bank-copjuamabgqmrhdvprfmhnlvobyc/Build/Intermediates.noindex/ArchiveIntermediates/Production/BuildProductsPath/Release\ Production-iphoneos/DynamicBlurView -F /Users/lukas/Library/Developer/Xcode/DerivedData/Equa_bank-copjuamabgqmrhdvprfmhnlvobyc/Build/Intermediates.noindex/ArchiveIntermediates/Production/BuildProductsPath/Release\ Production-iphoneos/FSCalendar -F /Users/lukas/Library/Developer/Xcode/DerivedData/Equa_bank-copjuamabgqmrhdvprfmhnlvobyc/Build/Intermediates.noindex/ArchiveIntermediates/Production/BuildProductsPath/Release\ Production-iphoneos/Realm -F /Users/lukas/Library/Developer/Xcode/DerivedData/Equa_bank-copjuamabgqmrhdvprfmhnlvobyc/Build/Intermediates.noindex/ArchiveIntermediates/Production/BuildProductsPath/Release\ Production-iphoneos/RealmSwift -F /Users/lukas/Library/Developer/Xcode/DerivedData/Equa_bank-copjuamabgqmrhdvprfmhnlvobyc/Build/Intermediates.noindex/ArchiveIntermediates/Production/BuildProductsPath/Release\ Production-iphoneos/SZTextView -F /Users/lukas/Library/Developer/Xcode/DerivedData/Equa_bank-copjuamabgqmrhdvprfmhnlvobyc/Build/Intermediates.noindex/ArchiveIntermediates/Production/BuildProductsPath/Release\ Production-iphoneos/SkyFloatingLabelTextField -F /Users/lukas/Projects/Equa\ Bank/mequa-ios/Pods/Crashlytics/iOS -F /Users/lukas/Projects/Equa\ Bank/mequa-ios/Pods/Fabric/iOS -g -module-cache-path /Users/lukas/Library/Developer/Xcode/DerivedData/ModuleCache.noindex -swift-version 4 -O -D COCOAPODS -serialize-debugging-options -Xcc -I/Users/lukas/Library/Developer/Xcode/DerivedData/Equa_bank-copjuamabgqmrhdvprfmhnlvobyc/Build/Intermediates.noindex/ArchiveIntermediates/Production/IntermediateBuildFilesPath/Equa\ bank.build/Release\ Production-iphoneos/Equa\ bank.build/swift-overrides.hmap -Xcc -iquote -Xcc /Users/lukas/Library/Developer/Xcode/DerivedData/Equa_bank-copjuamabgqmrhdvprfmhnlvobyc/Build/Intermediates.noindex/ArchiveIntermediates/Production/IntermediateBuildFilesPath/Equa\ bank.build/Release\ Production-iphoneos/Equa\ bank.build/Equa\ Prod-generated-files.hmap -Xcc -I/Users/lukas/Library/Developer/Xcode/DerivedData/Equa_bank-copjuamabgqmrhdvprfmhnlvobyc/Build/Intermediates.noindex/ArchiveIntermediates/Production/IntermediateBuildFilesPath/Equa\ bank.build/Release\ Production-iphoneos/Equa\ bank.build/Equa\ Prod-own-target-headers.hmap -Xcc -I/Users/lukas/Library/Developer/Xcode/DerivedData/Equa_bank-copjuamabgqmrhdvprfmhnlvobyc/Build/Intermediates.noindex/ArchiveIntermediates/Production/IntermediateBuildFilesPath/Equa\ bank.build/Release\ Production-iphoneos/Equa\ bank.build/Equa\ Prod-all-non-framework-target-headers.hmap -Xcc -ivfsoverlay -Xcc /Users/lukas/Library/Developer/Xcode/DerivedData/Equa_bank-copjuamabgqmrhdvprfmhnlvobyc/Build/Intermediates.noindex/ArchiveIntermediates/Production/IntermediateBuildFilesPath/Equa\ bank.build/Release\ Production-iphoneos/Equa\ bank.build/all-product-headers.yaml -Xcc -iquote -Xcc /Users/lukas/Library/Developer/Xcode/DerivedData/Equa_bank-copjuamabgqmrhdvprfmhnlvobyc/Build/Intermediates.noindex/ArchiveIntermediates/Production/IntermediateBuildFilesPath/Equa\ bank.build/Release\ Production-iphoneos/Equa\ bank.build/Equa\ Prod-project-headers.hmap -Xcc -I/Users/lukas/Library/Developer/Xcode/DerivedData/Equa_bank-copjuamabgqmrhdvprfmhnlvobyc/Build/Intermediates.noindex/ArchiveIntermediates/Production/BuildProductsPath/Release\ Production-iphoneos/include -Xcc -I/Users/lukas/Projects/Equa\ Bank/mequa-ios/Pods/Headers/Public -Xcc -I/Users/lukas/Projects/Equa\ Bank/mequa-ios/Pods/Headers/Public/Crashlytics -Xcc -I/Users/lukas/Projects/Equa\ Bank/mequa-ios/Pods/Headers/Public/Fabric -Xcc -I/Users/lukas/Projects/Equa\ Bank/mequa-ios/Pods/Headers/Public/GoogleMaps -Xcc -I/Users/lukas/Projects/Equa\ Bank/mequa-ios/Pods/FSCalendar/FSCalendar -Xcc -I/Users/lukas/Projects/Equa\ Bank/mequa-ios/Pods/Headers/Public -Xcc -I/Users/lukas/Projects/Equa\ Bank/mequa-ios/Pods/Headers/Public/PowerAuth2 -Xcc -I/Users/lukas/Library/Developer/Xcode/DerivedData/Equa_bank-copjuamabgqmrhdvprfmhnlvobyc/Build/Intermediates.noindex/ArchiveIntermediates/Production/IntermediateBuildFilesPath/Equa\ bank.build/Release\ Production-iphoneos/Equa\ bank.build/DerivedSources/arm64 -Xcc -I/Users/lukas/Library/Developer/Xcode/DerivedData/Equa_bank-copjuamabgqmrhdvprfmhnlvobyc/Build/Intermediates.noindex/ArchiveIntermediates/Production/IntermediateBuildFilesPath/Equa\ bank.build/Release\ Production-iphoneos/Equa\ bank.build/DerivedSources -Xcc -DCOCOAPODS=1 -Xcc -working-directory/Users/lukas/Projects/Equa\ Bank/mequa-ios -import-objc-header /Users/lukas/Projects/Equa\ Bank/mequa-ios/Equabank/SupportingFiles/Objc-Bridge-Header.h -pch-output-dir /Users/lukas/Library/Developer/Xcode/DerivedData/Equa_bank-copjuamabgqmrhdvprfmhnlvobyc/Build/Intermediates.noindex/ArchiveIntermediates/Production/PrecompiledHeaders -module-name Equa_Prod -num-threads 12 -output-filelist /var/folders/bw/s7y418kn7fz67tzkzst5_2jh0000gn/T/outputs-7f0dd5 0 swift 0x0000000103dff64a PrintStackTraceSignalHandler(void*) + 421 swift 0x0000000103dfedfe SignalHandler(int) + 3022 libsystem_platform.dylib 0x00007fff55092f5a _sigtramp + 263 libsystem_platform.dylib 0x00007ffeefbf79b0 _sigtramp + 25956378724 swift 0x0000000100f77eb3 (anonymous namespace)::SILTypeSubstituter::substSILFunctionType(swift::CanTypeWrapper<swift::SILFunctionType>) + 3875 swift 0x0000000100bb6417 swift::tryDevirtualizeApply(swift::ApplySite, swift::ClassHierarchyAnalysis*, swift::OptRemark::Emitter*) + 35756 swift 0x0000000100d49623 (anonymous namespace)::Devirtualizer::run() + 7397 swift 0x0000000100c700c9 swift::SILPassManager::execute() + 39778 swift 0x0000000100092d32 performCompile(swift::CompilerInstance&, swift::CompilerInvocation&, llvm::ArrayRef<char const*>, int&, swift::FrontendObserver*, swift::UnifiedStatsReporter*) + 477309 swift 0x0000000100083dc5 swift::performFrontend(llvm::ArrayRef<char const*>, char const*, void*, swift::FrontendObserver*) + 771710 swift 0x0000000100029a35 main + 134911 libdyld.dylib 0x00007fff54d84015 start + 112 libdyld.dylib 0x0000000000000067 start + 2871509075Stack dump:0. Program arguments: /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/swift -frontend -c -filelist /var/folders/bw/s7y418kn7fz67tzkzst5_2jh0000gn/T/sources-e3a4a7 -supplementary-output-file-map /var/folders/bw/s7y418kn7fz67tzkzst5_2jh0000gn/T/supplementaryOutputs-46e152 -target arm64-apple-ios10.0 -Xllvm -aarch64-use-tbi -enable-objc-interop -sdk /Applications/Xcode.app/Contents/Developer/Platforms/iPhoneOS.platform/Developer/SDKs/iPhoneOS12.0.sdk -I /Users/lukas/Library/Developer/Xcode/DerivedData/Equa_bank-copjuamabgqmrhdvprfmhnlvobyc/Build/Intermediates.noindex/ArchiveIntermediates/Production/BuildProductsPath/Release Production-iphoneos -F /Users/lukas/Library/Developer/Xcode/DerivedData/Equa_bank-copjuamabgqmrhdvprfmhnlvobyc/Build/Intermediates.noindex/ArchiveIntermediates/Production/BuildProductsPath/Release Production-iphoneos -F /Users/lukas/Library/Developer/Xcode/DerivedData/Equa_bank-copjuamabgqmrhdvprfmhnlvobyc/Build/Intermediates.noindex/ArchiveIntermediates/Production/BuildProductsPath/Release Production-iphoneos/AFDateHelper -F /Users/lukas/Library/Developer/Xcode/DerivedData/Equa_bank-copjuamabgqmrhdvprfmhnlvobyc/Build/Intermediates.noindex/ArchiveIntermediates/Production/BuildProductsPath/Release Production-iphoneos/Cluster -F /Users/lukas/Library/Developer/Xcode/DerivedData/Equa_bank-copjuamabgqmrhdvprfmhnlvobyc/Build/Intermediates.noindex/ArchiveIntermediates/Production/BuildProductsPath/Release Production-iphoneos/DeallocationChecker -F /Users/lukas/Library/Developer/Xcode/DerivedData/Equa_bank-copjuamabgqmrhdvprfmhnlvobyc/Build/Intermediates.noindex/ArchiveIntermediates/Production/BuildProductsPath/Release Production-iphoneos/DeviceKit -F /Users/lukas/Library/Developer/Xcode/DerivedData/Equa_bank-copjuamabgqmrhdvprfmhnlvobyc/Build/Intermediates.noindex/ArchiveIntermediates/Production/BuildProductsPath/Release Production-iphoneos/DynamicBlurView -F /Users/lukas/Library/Developer/Xcode/DerivedData/Equa_bank-copjuamabgqmrhdvprfmhnlvobyc/Build/Intermediates.noindex/ArchiveIntermediates/Production/BuildProductsPath/Release Production-iphoneos/FSCalendar -F /Users/lukas/Library/Developer/Xcode/DerivedData/Equa_bank-copjuamabgqmrhdvprfmhnlvobyc/Build/Intermediates.noindex/ArchiveIntermediates/Production/BuildProductsPath/Release Production-iphoneos/Realm -F /Users/lukas/Library/Developer/Xcode/DerivedData/Equa_bank-copjuamabgqmrhdvprfmhnlvobyc/Build/Intermediates.noindex/ArchiveIntermediates/Production/BuildProductsPath/Release Production-iphoneos/RealmSwift -F /Users/lukas/Library/Developer/Xcode/DerivedData/Equa_bank-copjuamabgqmrhdvprfmhnlvobyc/Build/Intermediates.noindex/ArchiveIntermediates/Production/BuildProductsPath/Release Production-iphoneos/SZTextView -F /Users/lukas/Library/Developer/Xcode/DerivedData/Equa_bank-copjuamabgqmrhdvprfmhnlvobyc/Build/Intermediates.noindex/ArchiveIntermediates/Production/BuildProductsPath/Release Production-iphoneos/SkyFloatingLabelTextField -F /Users/lukas/Projects/Equa Bank/mequa-ios/Pods/Crashlytics/iOS -F /Users/lukas/Projects/Equa Bank/mequa-ios/Pods/Fabric/iOS -g -module-cache-path /Users/lukas/Library/Developer/Xcode/DerivedData/ModuleCache.noindex -swift-version 4 -O -D COCOAPODS -serialize-debugging-options -Xcc -I/Users/lukas/Library/Developer/Xcode/DerivedData/Equa_bank-copjuamabgqmrhdvprfmhnlvobyc/Build/Intermediates.noindex/ArchiveIntermediates/Production/IntermediateBuildFilesPath/Equa bank.build/Release Production-iphoneos/Equa bank.build/swift-overrides.hmap -Xcc -iquote -Xcc /Users/lukas/Library/Developer/Xcode/DerivedData/Equa_bank-copjuamabgqmrhdvprfmhnlvobyc/Build/Intermediates.noindex/ArchiveIntermediates/Production/IntermediateBuildFilesPath/Equa bank.build/Release Production-iphoneos/Equa bank.build/Equa Prod-generated-files.hmap -Xcc -I/Users/lukas/Library/Developer/Xcode/DerivedData/Equa_bank-copjuamabgqmrhdvprfmhnlvobyc/Build/Intermediates.noindex/ArchiveIntermediates/Production/IntermediateBuildFilesPath/Equa bank.build/Release Production-iphoneos/Equa bank.build/Equa Prod-own-target-headers.hmap -Xcc -I/Users/lukas/Library/Developer/Xcode/DerivedData/Equa_bank-copjuamabgqmrhdvprfmhnlvobyc/Build/Intermediates.noindex/ArchiveIntermediates/Production/IntermediateBuildFilesPath/Equa bank.build/Release Production-iphoneos/Equa bank.build/Equa Prod-all-non-framework-target-headers.hmap -Xcc -ivfsoverlay -Xcc /Users/lukas/Library/Developer/Xcode/DerivedData/Equa_bank-copjuamabgqmrhdvprfmhnlvobyc/Build/Intermediates.noindex/ArchiveIntermediates/Production/IntermediateBuildFilesPath/Equa bank.build/Release Production-iphoneos/Equa bank.build/all-product-headers.yaml -Xcc -iquote -Xcc /Users/lukas/Library/Developer/Xcode/DerivedData/Equa_bank-copjuamabgqmrhdvprfmhnlvobyc/Build/Intermediates.noindex/ArchiveIntermediates/Production/IntermediateBuildFilesPath/Equa bank.build/Release Production-iphoneos/Equa bank.build/Equa Prod-project-headers.hmap -Xcc -I/Users/lukas/Library/Developer/Xcode/DerivedData/Equa_bank-copjuamabgqmrhdvprfmhnlvobyc/Build/Intermediates.noindex/ArchiveIntermediates/Production/BuildProductsPath/Release Production-iphoneos/include -Xcc -I/Users/lukas/Projects/Equa Bank/mequa-ios/Pods/Headers/Public -Xcc -I/Users/lukas/Projects/Equa Bank/mequa-ios/Pods/Headers/Public/Crashlytics -Xcc -I/Users/lukas/Projects/Equa Bank/mequa-ios/Pods/Headers/Public/Fabric -Xcc -I/Users/lukas/Projects/Equa Bank/mequa-ios/Pods/Headers/Public/GoogleMaps -Xcc -I/Users/lukas/Projects/Equa Bank/mequa-ios/Pods/FSCalendar/FSCalendar -Xcc -I/Users/lukas/Projects/Equa Bank/mequa-ios/Pods/Headers/Public -Xcc -I/Users/lukas/Projects/Equa Bank/mequa-ios/Pods/Headers/Public/PowerAuth2 -Xcc -I/Users/lukas/Library/Developer/Xcode/DerivedData/Equa_bank-copjuamabgqmrhdvprfmhnlvobyc/Build/Intermediates.noindex/ArchiveIntermediates/Production/IntermediateBuildFilesPath/Equa bank.build/Release Production-iphoneos/Equa bank.build/DerivedSources/arm64 -Xcc -I/Users/lukas/Library/Developer/Xcode/DerivedData/Equa_bank-copjuamabgqmrhdvprfmhnlvobyc/Build/Intermediates.noindex/ArchiveIntermediates/Production/IntermediateBuildFilesPath/Equa bank.build/Release Production-iphoneos/Equa bank.build/DerivedSources -Xcc -DCOCOAPODS=1 -Xcc -working-directory/Users/lukas/Projects/Equa Bank/mequa-ios -import-objc-header /Users/lukas/Projects/Equa Bank/mequa-ios/Equabank/SupportingFiles/Objc-Bridge-Header.h -pch-output-dir /Users/lukas/Library/Developer/Xcode/DerivedData/Equa_bank-copjuamabgqmrhdvprfmhnlvobyc/Build/Intermediates.noindex/ArchiveIntermediates/Production/PrecompiledHeaders -module-name Equa_Prod -num-threads 12 -output-filelist /var/folders/bw/s7y418kn7fz67tzkzst5_2jh0000gn/T/outputs-7f0dd5 1. Contents of /var/folders/bw/s7y418kn7fz67tzkzst5_2jh0000gn/T/sources-e3a4a7: --- /Users/lukas/Projects/Equa Bank/mequa-ios/Equabank/Features/Near You/Views/EBMapView.swift ... --- 2. While running pass #720577 SILFunctionTransform "Devirtualizer" on SILFunction "@$S9Equa_Prod17BaseFormViewModelPAAE25indexPathForFirstInputRow10Foundation05IndexH0VSgvgAA25NewStandingOrderPaymentVMC_Tg5". for getter for indexPathForFirstInputRow at /Users/lukas/Projects/Equa Bank/mequa-ios/Equabank/Shared/Base Controllers/BaseFormVM.swift:87:9error: Segmentation fault: 11
Attachments
Issue Links
- is duplicated by
-
SR-10128 Compiler crashes when generic type constraint is the associated type of another protocol which the class also conforms to which and has a default implementation
-
- Resolved
-
-
SR-10182 Segmentation Fault after updating to Xcode 10.2
-
- Resolved
-
-
SR-10462 LLDB Segmentation fault
-
- Resolved
-
-
SR-10741 Compiler crashes with protocols and generics + default extension (Assertion failed: (!isInvalid())
-
- Resolved
-
-
SR-10773 Regression: Segmentation fault: 11 compiling code in swift 5.0.1
-
- Resolved
-
-
SR-11108 Conformance checking doesn't consider 'where' clause for vars
-
- Resolved
-
-
SR-11913 Protocol requirements implemented solely in an extension crash the compiler
-
- Resolved
-
-
SR-12238 Segmentation Fault: 11 when conforming to protocol using a same generic and associated type names and a protocol extension.
-
- Resolved
-
-
SR-12352 Segmentation Fault With Generic Protocol Extensions
-
- Resolved
-
-
SR-12416 SILGen crash conforming class to Sequence
-
- Resolved
-
-
SR-12542 Compiler crash generating protocol witness
-
- Resolved
-
-
SR-12607 5.2 Crasher
-
- Resolved
-
-
SR-12624 Segmentation Fault 11
-
- Resolved
-
- relates to
-
SR-10656 Compiler crashes when using protocols with associated type
-
- Resolved
-